[gd_scene load_steps=16 format=3 uid="uid://c74chm7sqj604"]

[ext_resource type="AudioStream" uid="uid://darch3s820tyq" path="res://Music/Letting Go - Ambient Background Music.mp3" id="1"]
[ext_resource type="Script" path="res://Scripts/Misc Scripts/MainMenu.gd" id="2"]
[ext_resource type="Script" path="res://Scripts/Misc Scripts/ParallaxMenu.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bdel87qtl0fy4" path="res://Sprites/Core Game Sprites/Backgroundv2/1.png" id="4"]
[ext_resource type="Texture2D" uid="uid://2nbcxoowcoxu" path="res://Sprites/Core Game Sprites/Backgroundv2/2.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bkqxw0j5rlmbq" path="res://Sprites/Core Game Sprites/Backgroundv2/3.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bqcs0s4wntmc2" path="res://Sprites/Core Game Sprites/Backgroundv2/4.png" id="7"]
[ext_resource type="Texture2D" uid="uid://lwlg1dp1d7np" path="res://Sprites/Core Game Sprites/Backgroundv2/5.png" id="8"]
[ext_resource type="Texture2D" uid="uid://bt17n5ry0xslj" path="res://Sprites/Core Game Sprites/Backgroundv2/6.png" id="9"]
[ext_resource type="FontFile" uid="uid://dbsy4inkkwong" path="res://Fonts/GrapeSoda.ttf" id="9_jdaoe"]
[ext_resource type="Texture2D" uid="uid://dl3pbgpp5s8pu" path="res://Sprites/Text Sprites/tacotitle.png" id="11"]
[ext_resource type="FontFile" uid="uid://bw768k6nyjq4" path="res://Fonts/Caja.ttf" id="11_6o0oi"]

[sub_resource type="Animation" id="4"]
length = 0.001

[sub_resource type="Animation" id="3"]
resource_name = "TitleFloat"
length = 3.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuGUI/TextStrings/Game Title/TitleSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(27, 96), Vector2(27, 90), Vector2(27, 96)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tjcwr"]
_data = {
"RESET": SubResource("4"),
"TitleFloat": SubResource("3")
}

[node name="Main Menu" type="Node2D"]
process_mode = 3
script = ExtResource("2")

[node name="MenuGUI" type="CanvasLayer" parent="."]

[node name="Background" type="ParallaxBackground" parent="MenuGUI"]
script = ExtResource("3")

[node name="ParallaxLayer" type="ParallaxLayer" parent="MenuGUI/Background"]
motion_offset = Vector2(1, 0)
motion_mirroring = Vector2(640, 455)

[node name="Sprite2D" type="Sprite2D" parent="MenuGUI/Background/ParallaxLayer"]
position = Vector2(403, 226)
scale = Vector2(1.4, 1.4)
texture = ExtResource("4")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="MenuGUI/Background"]
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(805, 324)

[node name="Sprite2D" type="Sprite2D" parent="MenuGUI/Background/ParallaxLayer2"]
position = Vector2(403, 200)
scale = Vector2(1.4, 1.4)
texture = ExtResource("5")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="MenuGUI/Background"]
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(700, 324)

[node name="Sprite2D" type="Sprite2D" parent="MenuGUI/Background/ParallaxLayer3"]
position = Vector2(344, 175)
scale = Vector2(1.4, 1.4)
texture = ExtResource("6")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="MenuGUI/Background"]
motion_scale = Vector2(0.4, 1)
motion_mirroring = Vector2(805, 324)

[node name="Sprite2D" type="Sprite2D" parent="MenuGUI/Background/ParallaxLayer4"]
position = Vector2(403, 165)
scale = Vector2(1.4, 1.4)
texture = ExtResource("7")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="MenuGUI/Background"]
motion_scale = Vector2(0.3, 1)
motion_mirroring = Vector2(920, 324)

[node name="Sprite2D" type="Sprite2D" parent="MenuGUI/Background/ParallaxLayer5"]
position = Vector2(460, 142)
scale = Vector2(1.6, 1.6)
texture = ExtResource("8")

[node name="ParallaxLayer6" type="ParallaxLayer" parent="MenuGUI/Background"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(576, 324)

[node name="Sprite2D" type="Sprite2D" parent="MenuGUI/Background/ParallaxLayer6"]
position = Vector2(350, 170)
scale = Vector2(1.4, 1.4)
texture = ExtResource("9")

[node name="Buttons" type="CanvasLayer" parent="MenuGUI"]

[node name="ButtonsContainer" type="VBoxContainer" parent="MenuGUI/Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 4.00002
offset_right = 15.0
offset_bottom = 91.0
scale = Vector2(1.8, 1.3)
alignment = 1

[node name="Start Game" type="Button" parent="MenuGUI/Buttons/ButtonsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_jdaoe")
text = "Start Journey"
flat = true
expand_icon = true

[node name="Game Settings" type="Button" parent="MenuGUI/Buttons/ButtonsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_jdaoe")
text = " Game Settings"
flat = true
expand_icon = true

[node name="Quit Game" type="Button" parent="MenuGUI/Buttons/ButtonsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_jdaoe")
text = "quit game"
flat = true
expand_icon = true

[node name="TextStrings" type="CanvasLayer" parent="MenuGUI"]

[node name="Game Title" type="Control" parent="MenuGUI/TextStrings"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 6.0
offset_right = 20.0
offset_bottom = 45.0
grow_horizontal = 2

[node name="TitleSprite" type="Sprite2D" parent="MenuGUI/TextStrings/Game Title"]
position = Vector2(27, 96)
scale = Vector2(0.28, 0.27)
texture = ExtResource("11")

[node name="TitleAnimation" type="AnimationPlayer" parent="MenuGUI/TextStrings/Game Title/TitleSprite"]
root_node = NodePath("../../../../..")
autoplay = "TitleFloat"
libraries = {
"": SubResource("AnimationLibrary_tjcwr")
}

[node name="Copyright" type="Label" parent="MenuGUI/TextStrings"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -30.0
offset_right = -18.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.1, 1.1)
theme_override_fonts/font = ExtResource("11_6o0oi")
text = "by Voodostar Games"

[node name="Game Version" type="Label" parent="MenuGUI/TextStrings"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -229.0
offset_top = -19.0
offset_right = -26.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.1, 1.1)
theme_override_fonts/font = ExtResource("11_6o0oi")
text = "Taco's Wonderland Alpha 0.3.0"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1")
autoplay = true
mix_target = 1

[connection signal="pressed" from="MenuGUI/Buttons/ButtonsContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MenuGUI/Buttons/ButtonsContainer/Game Settings" to="." method="_on_game_settings_pressed"]
[connection signal="pressed" from="MenuGUI/Buttons/ButtonsContainer/Quit Game" to="." method="_on_quit_game_pressed"]
